RESOLVED FIXED 84581
REGRESSION(r114870): Assertion failure in ElementAttributeData::setAttr().
https://bugs.webkit.org/show_bug.cgi?id=84581
Summary REGRESSION(r114870): Assertion failure in ElementAttributeData::setAttr().
Andreas Kling
Reported 2012-04-23 03:07:38 PDT
REGRESSION(r114870): Assertion failure in ElementAttributeData::ensureAttr().
Attachments
Patch (1.73 KB, patch)
2012-04-23 03:08 PDT, Andreas Kling
koivisto: review+
Andreas Kling
Comment 1 2012-04-23 03:08:32 PDT
Antti Koivisto
Comment 2 2012-04-23 03:10:16 PDT
Comment on attachment 138316 [details] Patch r=me
Andreas Kling
Comment 3 2012-04-23 03:10:37 PDT
ASSERTION FAILED: !attrMap().contains(std::make_pair(element, name)) /Volumes/Data/slave/lion-intel-debug/build/Source/WebCore/dom/ElementAttributeData.cpp(61) : void WebCore::ElementAttributeData::setAttr(WebCore::Element *, const WebCore::QualifiedName &, WebCore::Attr *) 1 0x10ca20298 WebCore::ElementAttributeData::ensureAttr(WebCore::Element*, WebCore::QualifiedName const&) 2 0x10ca2185b WebCore::ElementAttributeData::getAttributeNode(WTF::String const&, bool, WebCore::Element*) const 3 0x10ca17349 WebCore::Element::getAttributeNode(WTF::String const&) 4 0x10d44b842 WebCore::NamedNodeMap::getNamedItem(WTF::String const&) const 5 0x10d0ea790 WebCore::jsNamedNodeMapPrototypeFunctionGetNamedItem(JSC::ExecState*) 6 0x39b2fcc01265 7 0x10ba34ee9 JSC::JITCode::execute(JSC::RegisterFile*, JSC::ExecState*, JSC::JSGlobalData*) 8 0x10ba31500 JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 9 0x10b916ff8 JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 10 0x10ce7afc2 WebCore::JSMainThreadExecState::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 11 0x10cfaa9b4 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext*, WebCore::Event*) 12 0x10ca551e7 WebCore::EventTarget::fireEventListeners(WebCore::Event*, WebCore::EventTargetData*, WTF::Vector<WebCore::RegisteredEventListener, 1ul>&) 13 0x10ca5504b WebCore::EventTarget::fireEventListeners(WebCore::Event*) 14 0x10c9b69d0 WebCore::DOMWindow::dispatchEvent(WTF::PassRefPtr<WebCore::Event>, WTF::PassRefPtr<WebCore::EventTarget>) 15 0x10c9bd299 WebCore::DOMWindow::dispatchLoadEvent() 16 0x10c82165a WebCore::Document::dispatchWindowLoadEvent() 17 0x10c81ee40 WebCore::Document::implicitClose() 18 0x10cade14b WebCore::FrameLoader::checkCallImplicitClose() 19 0x10cadde33 WebCore::FrameLoader::checkCompleted() 20 0x10caddfa5 WebCore::FrameLoader::loadDone() 21 0x10c573da5 WebCore::CachedResourceLoader::loadDone() 22 0x10d8e52a0 WebCore::SubresourceLoader::releaseResources() 23 0x10d79a2b2 WebCore::ResourceLoader::didFinishLoading(double) 24 0x10d8e4ec6 WebCore::SubresourceLoader::didFinishLoading(double) 25 0x10d79aa75 WebCore::ResourceLoader::didFinishLoading(WebCore::ResourceHandle*, double) 26 0x10d79769b -[WebCoreResourceHandleAsDelegate connectionDidFinishLoading:] 27 0x7fff8c997662 ___NSURLConnectionDidFinishLoading_block_invoke_1 28 0x7fff8c9975e2 _NSURLConnectionDidFinishLoading 29 0x7fff873cb4fe URLConnectionClient::_clientDidFinishLoading(URLConnectionClient::ClientConnectionEventQueue*) 30 0x7fff8747b91e URLConnectionClient::ClientConnectionEventQueue::processAllEventsAndConsumePayload(XConnectionEventInfo<XClientEvent, XClientEventParams>*, long) 31 0x7fff873a6389 URLConnectionClient::processEvents()
Andreas Kling
Comment 4 2012-04-23 03:18:50 PDT
Note You need to log in before you can comment on or make changes to this bug.